# tictactoe_swartz_jenna

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/tictactoe_jns2184/: __init__.py  tictactoe_jns2184.py
tests/: test_tictactoe_jns2184.py
tictactoe_jns2184/: tictactoe_jns2184.py
