[tool.poetry]
name = "tictactoe_jns2184"
version = "0.1.0"
description = "A package for creating, testing, and playing Tic Tac Toe"
authors = ["Jenna Swartz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
